--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>연습</h1>
   <ol>
-    <li><a href="WEB\index.html">가져와 본 예제</a></li>
+    <li><a href="WEB\index.html">그냥  예제</a></li>
     <li><a href="GBGM\gbgm.html">게임 BGM 5선</a></li>
   </ol>
   <p>잡내용이 서술되는 중인 공간입니다.
