--- a/GBGM/gbgm.html
+++ b/GBGM/gbgm.html
@@ -51,7 +51,7 @@
   </div></h2>
   <div id="c-paragraph" onclick="pFold()">
     <p>
-      &nbsp게임 BGM과 그 게임에 대하여 간단히 다루는 내용으로, 스팀에 유통되고 있는 인디게임을 언급한다. 추후에 콘솔/PC온라인 정도의 카테고리도 추가할 예정이다.
+      게임 BGM과 그 게임에 대하여 간단히 다루는 내용으로, 스팀에 유통되고 있는 인디게임을 언급한다. 추후에 콘솔/PC온라인 정도의 카테고리도 추가할 예정이다.
     </p>
   </div>
   <h2><div id="c-head" onclick="pFold()"><a id="d1" href="#top">1.</a>
@@ -62,10 +62,10 @@
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/oK9V-8WTEP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p><br>
     <p>
-      &nbsp리듬게임 OSM(Old School Musical)의 수록곡 중 하나. OSM은 판정표시가 중앙에 있으며 A, B, X, Y에 대응하는 4키 페이즈와 L, R에 대응하는 2키 페이즈를 번갈아가며 진행하는 리듬게임이다. 물론 틀려서 체력이 다하면 게임오버다. 수십 개의 다양한 곡들이 수록되어 있다.
+      리듬게임 OSM(Old School Musical)의 수록곡 중 하나. OSM은 판정표시가 중앙에 있으며 A, B, X, Y에 대응하는 4키 페이즈와 L, R에 대응하는 2키 페이즈를 번갈아가며 진행하는 리듬게임이다. 물론 틀려서 체력이 다하면 게임오버다. 수십 개의 다양한 곡들이 수록되어 있다.
     </p>
     <p>
-      &nbsp해당 곡의 앨범은 2014년에 발매되었지만, 게임은 4년 뒤인 2018년에 출시됐다.
+      해당 곡의 앨범은 2014년에 발매되었지만, 게임은 4년 뒤인 2018년에 출시됐다.
     </p>
   </div>
   <h2><div id="c-head" onclick="pFold()"><a id="d2" href="#top">2.</a>
@@ -76,7 +76,7 @@
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Ver6Bk-N-0U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p><br>
     <p>
-      &nbsp턴제 전략 로그라이크 Into the Breach의 처음부터 할 수 있는 섬에서 쉽게 들을 수 있는 곡이다. Into the Breach는 거대한 로봇들로 Vek이라 불리는 괴물들과 맞서싸워 주거지를 지키는 게임이다. 대부분은 오직 3대의 로봇 만으로 행동할 수 있기 때문에 난이도에 따라 이지선다가 걸려 오는 경우가 많으므로 체스처럼 전술적으로 플레이하는 것이 중요하다.
+      턴제 전략 로그라이크 Into the Breach의 처음부터 할 수 있는 섬에서 쉽게 들을 수 있는 곡이다. Into the Breach는 거대한 로봇들로 Vek이라 불리는 괴물들과 맞서싸워 주거지를 지키는 게임이다. 대부분은 오직 3대의 로봇 만으로 행동할 수 있기 때문에 난이도에 따라 이지선다가 걸려 오는 경우가 많으므로 체스처럼 전술적으로 플레이하는 것이 중요하다.
     </p>
   </div>
   <h2><div id="c-head" onclick="pFold()"><a id="d3" href="#top">3.</a>
@@ -87,10 +87,10 @@
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/jML5MxKyk00" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p><br>
     <p>
-      &nbsp리듬 로그라이크 Crypt of the Necrodancer의 1지역 2층 테마의 리믹스 중 하나. Crypt of the Necrodancer는 상하좌우 방향키로 4비트에 주기적으로 맞춰야 움직일 수 있는 로그라이크다. 박자를 맞추는 것은 물론 몬스터의 패턴에 대처해야 하기 때문에 사람에 따라 어려운 게임이 될 수 있다.
+      리듬 로그라이크 Crypt of the Necrodancer의 1지역 2층 테마의 리믹스 중 하나. Crypt of the Necrodancer는 상하좌우 방향키로 4비트에 주기적으로 맞춰야 움직일 수 있는 로그라이크다. 박자를 맞추는 것은 물론 몬스터의 패턴에 대처해야 하기 때문에 사람에 따라 어려운 게임이 될 수 있다.
     </p>
     <p>
-      &nbsp원곡은 Danny Baranowsky가 작곡했으며 12/8박자다. 해당 리믹스 곡은 다른 리믹스와 달리 4/4박자로 구성되어 있어 비교적 인상이 있다.
+      원곡은 Danny Baranowsky가 작곡했으며 12/8박자다. 해당 리믹스 곡은 다른 리믹스와 달리 4/4박자로 구성되어 있어 비교적 인상이 있다.
     </p>
   </div>
   <h2><div id="c-head" onclick="pFold()"><a id="d4" href="#top">4.</a>
@@ -101,7 +101,7 @@
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bJNXazHoLkE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p><br>
     <p>
-      &nbsp플래포머 생존 게임 Rain World의 곡 중 하나. Rain World는 야생에서 배를 채우고 유일하게 거대한 폭우를 피할 수 있는 피난처를 가야 하는 어려운 서바이벌이다. 플레이어블인 Slugcat은 먹이사슬의 하위에 있으며, 포식자들을 대처해 나가야 한다. 조작감이 진짜 달팽이같은 것은 둘째 치고 길 안내도 없으며 튜토리얼이 전무하다시피 하여 초보에게는 매우 어려운 게임이다.
+      플래포머 생존 게임 Rain World의 곡 중 하나. Rain World는 야생에서 배를 채우고 유일하게 거대한 폭우를 피할 수 있는 피난처를 가야 하는 어려운 서바이벌이다. 플레이어블인 Slugcat은 먹이사슬의 하위에 있으며, 포식자들을 대처해 나가야 한다. 조작감이 진짜 달팽이같은 것은 둘째 치고 길 안내도 없으며 튜토리얼이 전무하다시피 하여 초보에게는 매우 어려운 게임이다.
     </p>
   </div>
   <h2><div id="c-head" onclick="pFold()"><a id="d5" href="#top">5.</a>
@@ -111,7 +111,7 @@
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wGf72sBziXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p><br>
     <p>
-      &nbsp플래포머 게임 OCTAHEDRON의 후반부 지역 곡 중 하나. OCTAHEDRON은 발판을 소환하는 것을 이용해 스테이지를 통과하는 평범한 플래포머다. 클럽 분위기의 그래픽을 가지고 있는데, 그래서 그런지 게임을 키면 광과민성 증후군과 관련된 경고문이 뜬다.
+      플래포머 게임 OCTAHEDRON의 후반부 지역 곡 중 하나. OCTAHEDRON은 발판을 소환하는 것을 이용해 스테이지를 통과하는 평범한 플래포머다. 클럽 분위기의 그래픽을 가지고 있는데, 그래서 그런지 게임을 키면 광과민성 증후군과 관련된 경고문이 뜬다.
     </p>
   </div>
   <h2></h2>
