--- a/GBGM/test.html
+++ b/GBGM/test.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>연습장</title>
+  <link rel="icon" href="icon2h.png">
   <style type="text/CSS">
   h1{
     border-bottom: 1px solid grey;
