--- a/GBGM/test.html
+++ b/GBGM/test.html
@@ -18,20 +18,21 @@
     padding: 20px;
   }
   .c-lock{
-    text-align:center;
-    box-sizing: inherit;
+    align: center;
     display: inline-block;
     background-color: black;
     color: white;
     border: 2px solid grey;
     border-radius: 15px / 15px;
-    padding:30px;
+    padding: 30px;
   }
   .c-date{
     font-size: 15px;
   }
   .c-time{
     font-size: 45px;
+    font-family: 'Comic Sans MS';
+    width:200px;
   }
   .cw-button{
     background-color: grey;
@@ -154,15 +155,17 @@
       init();
     </script>
     <script type="Text/javascript">
-      var ms = 0;
+      var offset = 0;
+      var tms = 0;
+      var ntime = 0;
       var flag = 0;
       var lcount = 0;
       function increment(){
-        if (flag === 1){
-          ms++;
-          var mins = Math.floor(ms/100/60);
-          var secs = Math.floor(ms/100)%60;
-          var mss = ms%100;
+        if(flag === 1){
+          tms = new Date().ntime.getTime() - offset.getTime();
+          var mins = Math.floor(tms/1000/60);
+          var secs = Math.floor(tms/1000)%60;
+          var mss = Math.floor(tms/10%100);
           document.getElementById("w-stw").innerHTML = `${mins < 10 ? `0${mins}` : mins}:${secs < 10 ? `0${secs }`  : secs }.${mss < 10 ? `0${mss }`  : mss }`;
         }
       }
@@ -174,8 +177,9 @@
         document.getElementById("w-lap").appendChild(node);
       }
       function tReset(){
-        ms = 0;
+        tms = 0;
         lcount = 0;
+        offset = 0;
         var laps = document.getElementById("w-lap");
         while(laps.hasChildNodes()){
           laps.removeChild(laps.firstChild);
@@ -183,24 +187,25 @@
         document.getElementById("w-stw").innerHTML = "00:00.00";
       }
       function tResume(){
-          flag = 1;
-          document.getElementById("b-lap").style.display = "inline-block";
-          document.getElementById("b-reset").style.display = "none";
-          document.getElementById("b-resume").style.display = "none";
-          document.getElementById("b-pause").style.display = "inline-block";
+        flag = 1;
+        document.getElementById("b-lap").style.display = "inline-block";
+        document.getElementById("b-reset").style.display = "none";
+        document.getElementById("b-resume").style.display = "none";
+        document.getElementById("b-pause").style.display = "inline-block";
+        if(offset === 0){
+          offset = new Date();
+        }
+        setInterval(increment, 10);
       }
       function tPause(){
-          flag = 0;
-          document.getElementById("b-lap").style.display = "none";
-          document.getElementById("b-reset").style.display = "inline-block";
-          document.getElementById("b-resume").style.display = "inline-block";
-          document.getElementById("b-pause").style.display = "none";
+        flag = 0;
+        document.getElementById("b-lap").style.display = "none";
+        document.getElementById("b-reset").style.display = "inline-block";
+        document.getElementById("b-resume").style.display = "inline-block";
+        document.getElementById("b-pause").style.display = "none";
+        ntime = tms;
+        clearInterval(increment);
       }
-      function init(){
-          increment();
-          setInterval(increment, 10);
-      }
-      init();
     </script>
 </body>
 
