--- a/GBGM/test.html
+++ b/GBGM/test.html
@@ -29,6 +29,8 @@
     font-size: 15px;
   }
   .c-time{
+    text-align: justify;
+    padding-left: 15px;
     font-size: 45px;
     font-family: 'Comic Sans MS';
     width:200px;
