--- a/GBGM/gbgm.html
+++ b/GBGM/gbgm.html
@@ -2,39 +2,65 @@
 <html>
 <head>
   <title>게임 BGM 5선</title>
+  <link rel="icon" href="icon2h.png">
   <style type="text/CSS">
+    .c-top{
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      background-color: #555555;
+      position: fixed;
+      top: 0;
+      width: 100%;
+    }
+    .ct-clock{
+      float: right;
+      align: center;
+      display: inline-block;
+      text-align: justify;
+      font-family: 'Arial';
+      width: 50px;
+      background-color: black;
+      color: white;
+      padding: 10px;
+      padding-left: 15px;
+    }
     h1{
-    border-bottom: 1px solid grey;
-    padding-bottom: 15px;
-  }
-  .box-index{
-    border: 1px solid grey;
-    display: inline-block;
-    box-sizing: inherit;
-    padding: 20px;
-    margin: 10px;
-    margin-top: 50px;
-  }
-  .item-index{
-    display: block;
-    box-sizing: inherit;
-  }
-  h2{
-    border-bottom: 1px solid grey;
-    padding-bottom: 15px;
-    margin-top: 50px;
-  }
-  .c-all{
-    padding: 20px;
-  }
+      border-bottom: 1px solid grey;
+      padding-bottom: 15px;
+      margin-top: 80px;
+    }
+    .box-index{
+      border: 1px solid grey;
+      display: inline-block;
+      box-sizing: inherit;
+      padding: 20px;
+      margin: 10px;
+      margin-top: 50px;
+    }
+    .item-index{
+      display: block;
+      box-sizing: inherit;
+    }
+    h2{
+      border-bottom: 1px solid grey;
+      padding-bottom: 15px;
+      margin-top: 50px;
+    }
+    .c-all{
+      padding: 20px;
+    }
   </style>
   <meta charset="utf-8">
 </head>
 
 <body>
+  <div id="top"></div>
+  <ul class="c-top">
+  <li class="ct-clock"></li></ul>
   <div class="c-all">
   <h1>게임 BGM 5선</h1>
-  <div class="box-index" id="top">
+  <div class="box-index">
     <span class="item-index"><a href="#d1">1.</a>
       Dubmood - Datasalen</span>
     <span class="item-index"><a href="#d2">2.</a>
@@ -46,18 +72,19 @@
     <span class="item-index"><a href="#d5">5.</a>
       Andrè Sobota - Entropy</span>
   </div>
-  <h2><div id="c-head" onclick="pFold()">
+  <h2><span class="c-head">
     개요
-  </div></h2>
-  <div id="c-paragraph" onclick="pFold()">
+  </span></h2>
+  <div class="c-paragraph">
     <p>
       게임 BGM과 그 게임에 대하여 간단히 다루는 내용으로, 스팀에 유통되고 있는 인디게임을 언급한다. 추후에 콘솔/PC온라인 정도의 카테고리도 추가할 예정이다.
     </p>
   </div>
-  <h2><div id="c-head" onclick="pFold()"><a id="d1" href="#top">1.</a>
-    Dubmood - Datasalen
-  </div></h2>
-  <div id="c-paragraph" onclick="pFold()">
+  <h2><a id="d1" href="#top">1.</a>
+    <span class="c-head">
+      Dubmood - Datasalen
+  </span></h2>
+  <div class="c-paragraph">
     <p>
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/oK9V-8WTEP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p><br>
@@ -68,10 +95,11 @@
       해당 곡의 앨범은 2014년에 발매되었지만, 게임은 4년 뒤인 2018년에 출시됐다.
     </p>
   </div>
-  <h2><div id="c-head" onclick="pFold()"><a id="d2" href="#top">2.</a>
-    Ben Prunty - Old War Machines
-  </div></h2>
-  <div id="c-paragraph">
+  <h2><a id="d2" href="#top">2.</a>
+    <span class="c-head">
+      Ben Prunty - Old War Machines
+  </span></h2>
+  <div class="c-paragraph">
     <p>
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Ver6Bk-N-0U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p><br>
@@ -79,10 +107,11 @@
       턴제 전략 로그라이크 Into the Breach의 처음부터 할 수 있는 섬에서 쉽게 들을 수 있는 곡이다. Into the Breach는 거대한 로봇들로 Vek이라 불리는 괴물들과 맞서싸워 주거지를 지키는 게임이다. 대부분은 오직 3대의 로봇 만으로 행동할 수 있기 때문에 난이도에 따라 이지선다가 걸려 오는 경우가 많으므로 체스처럼 전술적으로 플레이하는 것이 중요하다.
     </p>
   </div>
-  <h2><div id="c-head" onclick="pFold()"><a id="d3" href="#top">3.</a>
-    RoboRob - Crypteque (OC Remix)
-  </div></h2>
-  <div id="c-paragraph">
+  <h2><a id="d3" href="#top">3.</a>
+    <span class="c-head">
+      RoboRob - Crypteque (OC Remix)
+  </span></h2>
+  <div class="c-paragraph">
     <p>
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/jML5MxKyk00" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p><br>
@@ -93,10 +122,11 @@
       원곡은 Danny Baranowsky가 작곡했으며 12/8박자다. 해당 리믹스 곡은 다른 리믹스와 달리 4/4박자로 구성되어 있어 비교적 인상이 있다.
     </p>
   </div>
-  <h2><div id="c-head" onclick="pFold()"><a id="d4" href="#top">4.</a>
-    James Primate - Bio-engineering
-  </div></h2>
-  <div id="c-paragraph">
+  <h2><a id="d4" href="#top">4.</a>
+    <span class="c-head">
+      James Primate - Bio-engineering
+  </span></h2>
+  <div class="c-paragraph">
     <p>
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bJNXazHoLkE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p><br>
@@ -104,9 +134,11 @@
       플래포머 생존 게임 Rain World의 곡 중 하나. Rain World는 야생에서 배를 채우고 유일하게 거대한 폭우를 피할 수 있는 피난처를 가야 하는 어려운 서바이벌이다. 플레이어블인 Slugcat은 먹이사슬의 하위에 있으며, 포식자들을 대처해 나가야 한다. 조작감이 진짜 달팽이같은 것은 둘째 치고 길 안내도 없으며 튜토리얼이 전무하다시피 하여 초보에게는 매우 어려운 게임이다.
     </p>
   </div>
-  <h2><div id="c-head" onclick="pFold()"><a id="d5" href="#top">5.</a>
-    Andrè Sobota - Entropy</div></h2>
-  <div id="c-paragraph">
+  <h2><a id="d5" href="#top">5.</a>
+    <span class="c-head">
+      Andrè Sobota - Entropy
+  </span></h2>
+  <div class="c-paragraph">
     <p>
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wGf72sBziXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p><br>
@@ -116,15 +148,40 @@
   </div>
   <h2></h2>
 </div>
-  <script type="text/javascript">
-    function pFold() {
-      var p = document.getElementById("c-paragraph");
+  <script type="text/javascript"> <!-- 숨기기 -->
+    ca = document.querySelector(".c-all");
+    function pFold(head) {
+      let p = head.parentNode.nextSibling.nextSibling;
+      console.log(p);
       if (p.style.display === "none") {
         p.style.display = "block";
       } else {
         p.style.display = "none";
       }
     }
+    ha = ca.querySelectorAll(".c-head");
+    for(const hac of ha){
+      hac.addEventListener("click", function(){
+        pFold(hac);
+      }, false);
+    }
+  </script>
+  <script type="Text/javascript"> <!-- 시계 -->
+    let cc = ":";
+    function tClock(){
+      let vClock = new Date();
+      let hh = vClock.getHours();
+      let mm = vClock.getMinutes();
+      if(cc === ":"){
+        cc = "&nbsp";
+      }
+      else{
+        cc = ":";
+      }
+      document.querySelector(".ct-clock").innerHTML = ((hh < 10 ? "0" : "" ) + hh + "<span>" + cc + "</span>" + (mm < 10 ? "0" : "") + mm);
+    }
+    tClock();
+    setInterval(tClock, 500);
   </script>
 </body>
 
